Setup initial three div elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Technical Documentation</title>
 </head>
 <body>
-    
+    <!-- Navigation -->
+    <div id="nav-div">
+
+    </div>
+
+    <!-- Main Content -->
+    <div id="main-div">
+
+    </div>
+
+    <!-- Footer -->
+    <div id="footer-div">
+        
+    </div>
 </body>
 </html>
