--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <!-- Navigation -->
     <div id="nav-div">
-
+        <nav id="navbar">
+            <header id="nav-header">Tech Doc Main Topic</header>
+            <a href="#" class="nav-link">Main Section #1</a>
+            <a href="#" class="nav-link">Main Section #2</a>
+            <a href="#" class="nav-link">Main Section #3</a>
+            <a href="#" class="nav-link">Main Section #4</a>
+        </nav>
     </div>
 
     <!-- Main Content -->
@@ -19,7 +25,7 @@
 
     <!-- Footer -->
     <div id="footer-div">
-        
+
     </div>
 </body>
 </html>
