Temp main content setup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
 
     <!-- Main Content -->
     <div id="main-div">
-
+        <section class="main-section">
+            <header id="mainSection1">Main Section #1</header>
+            <p>Temp Content 1</p>
+        </section>
+        <section class="main-section">
+            <header id="mainSection2">Main Section #2</header>
+            <p>Temp Content 22</p>
+        </section>
+        <section class="main-section">
+            <header id="mainSection3">Main Section #3</header>
+            <p>Temp Content 333</p>
+        </section>
+        <section class="main-section">
+            <header id="mainSection4">Main Section #4</header>
+            <p>Temp Content 4444</p>
+        </section>
     </div>
 
     <!-- Footer -->
