Added temp 'a' elements

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
             <a href="#" class="nav-link">Main Section #2</a>
             <a href="#" class="nav-link">Main Section #3</a>
             <a href="#" class="nav-link">Main Section #4</a>
+            <a href="#" class="nav-link">Main Section #1</a>
+            <a href="#" class="nav-link">Main Section #2</a>
+            <a href="#" class="nav-link">Main Section #3</a>
+            <a href="#" class="nav-link">Main Section #4</a>
+            <a href="#" class="nav-link">Main Section #1</a>
+            <a href="#" class="nav-link">Main Section #2</a>
+            <a href="#" class="nav-link">Main Section #3</a>
+            <a href="#" class="nav-link">Main Section #4</a>
         </nav>
     </div>
 
@@ -36,6 +44,7 @@
             <header id="mainSection4">Main Section #4</header>
             <p>Temp Content 4444</p>
         </section>
+        
     </div>
 
     <!-- Footer -->
