Moved nav-header into div-header

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Technical Documentation</title>
 </head>
 <body>
+    <!-- Header -->
+    <div id="div-header">
+        <header id="nav-header">Tech Doc Main Topic</header>
+    </div>
+
     <!-- Navigation -->
     <div id="nav-div">
         <nav id="navbar">
-            <header id="nav-header">Tech Doc Main Topic</header>
             <a href="#" class="nav-link">Main Section #1</a>
             <a href="#" class="nav-link">Main Section #2</a>
             <a href="#" class="nav-link">Main Section #3</a>
