Removed temp text

--- a/index.html
+++ b/index.html
@@ -7,27 +7,22 @@
     <title>Technical Documentation</title>
 </head>
 <body>
-    <!-- Header -->
-    <div id="div-header">
-        <header id="nav-header">Tech Doc Main Topic</header>
-    </div>
+    <!-- Header/Nav Div -->
+    <div id="header-nav">
+        <!-- Header -->
+        <div id="div-header">
+            <header id="main-header">Tech Doc Main Topic</header>
+        </div>
 
-    <!-- Navigation -->
-    <div id="nav-div">
-        <nav id="navbar">
-            <a href="#" class="nav-link">Main Section #1</a>
-            <a href="#" class="nav-link">Main Section #2</a>
-            <a href="#" class="nav-link">Main Section #3</a>
-            <a href="#" class="nav-link">Main Section #4</a>
-            <a href="#" class="nav-link">Main Section #1</a>
-            <a href="#" class="nav-link">Main Section #2</a>
-            <a href="#" class="nav-link">Main Section #3</a>
-            <a href="#" class="nav-link">Main Section #4</a>
-            <a href="#" class="nav-link">Main Section #1</a>
-            <a href="#" class="nav-link">Main Section #2</a>
-            <a href="#" class="nav-link">Main Section #3</a>
-            <a href="#" class="nav-link">Main Section #4</a>
-        </nav>
+        <!-- Navigation -->
+        <div id="nav-div">
+            <nav id="navbar">
+                <a href="#" class="nav-link">Main Section #1</a>
+                <a href="#" class="nav-link">Main Section #2</a>
+                <a href="#" class="nav-link">Main Section #3</a>
+                <a href="#" class="nav-link">Main Section #4</a>
+            </nav>
+        </div>
     </div>
 
     <!-- Main Content -->
@@ -48,7 +43,6 @@
             <header id="mainSection4">Main Section #4</header>
             <p>Temp Content 4444</p>
         </section>
-        
     </div>
 
     <!-- Footer -->
