Added ID's, link addresses, Titles, and Headers

--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Technical Documentation</title>
+    <title>Getting started with CSS</title>
 </head>
 <body>
     <!-- Header/Nav Div -->
     <div id="header-nav">
         <!-- Header -->
         <div id="div-header">
-            <header id="main-header">Tech Doc Main Topic</header>
+            <header id="main-header">Getting started with CSS</header>
         </div>
 
         <!-- Navigation -->
         <div id="nav-div">
             <nav id="navbar">
-                <a href="#" class="nav-link">Main Section #1</a>
-                <a href="#" class="nav-link">Main Section #2</a>
-                <a href="#" class="nav-link">Main Section #3</a>
-                <a href="#" class="nav-link">Main Section #4</a>
+                <a href="#starting-with-some-html" class="nav-link">Starting with some HTML</a>
+                <a href="#adding-css-to-our-document" class="nav-link">Adding CSS to our document</a>
+                <a href="#styling-html-elements" class="nav-link">Styling HTML elements</a>
+                <a href="#changing-the-default-behavior-of-elements" class="nav-link">Changing the default behavior of elements</a>
+                <a href="#adding-a-class" class="nav-link">Adding a class</a>
+                <a href="#styling-thing-based-on-their-location-in-a-document" class="nav-link">Styling thing based on their location in a document</a>
+                <a href="#styling-thing-based-on-state" class="nav-link">Styling thing based on state</a>
+                <a href="#combining-selectors-and-combinators" class="nav-link">Combining selectors and combinators</a>
+                <a href="#wrapping-up" class="nav-link">Wrapping up</a>
             </nav>
         </div>
     </div>
@@ -29,19 +34,39 @@
     <div id="main-div">
         <main id="main-doc">
             <section class="main-section">
-                <header id="mainSection1">Main Section #1</header>
+                <header id="starting-with-some-html">Starting with some HTML</header>
                 <p>Temp Content 1</p>
             </section>
             <section class="main-section">
-                <header id="mainSection2">Main Section #2</header>
+                <header id="adding-css-to-our-document">Adding CSS to our document</header>
                 <p>Temp Content 22</p>
             </section>
             <section class="main-section">
-                <header id="mainSection3">Main Section #3</header>
+                <header id="styling-html-elements">Styling HTML elements</header>
                 <p>Temp Content 333</p>
             </section>
             <section class="main-section">
-                <header id="mainSection4">Main Section #4</header>
+                <header id="changing-the-default-behavior-of-elements">Changing the default behavior of elements</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="adding-a-class">Adding a class</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="styling-thing-based-on-their-location-in-a-document">Styling thing based on their location in a document</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="styling-thing-based-on-state">Styling thing based on state</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="combining-selectors-and-combinators">Combining selectors and combinators</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="wrapping-up">Wrapping up</header>
                 <p>Temp Content 4444</p>
             </section>
         </main>
