--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Getting started with CSS</title>
+    <title>JavaScript Object Basics</title>
 </head>
 <body>
     <!-- Header/Nav Div -->
     <div id="header-nav">
         <!-- Header -->
         <div id="div-header">
-            <header id="main-header">Getting started with CSS</header>
+            <header id="main-header">JavaScript Object Basics</header>
         </div>
 
         <!-- Navigation -->
         <div id="nav-div">
             <nav id="navbar">
-                <a href="#starting-with-some-html" class="nav-link">Starting with some HTML</a>
-                <a href="#adding-css-to-our-document" class="nav-link">Adding CSS to our document</a>
-                <a href="#styling-html-elements" class="nav-link">Styling HTML elements</a>
-                <a href="#changing-the-default-behavior-of-elements" class="nav-link">Changing the default behavior of elements</a>
-                <a href="#adding-a-class" class="nav-link">Adding a class</a>
-                <a href="#styling-thing-based-on-their-location-in-a-document" class="nav-link">Styling thing based on their location in a document</a>
-                <a href="#styling-thing-based-on-state" class="nav-link">Styling thing based on state</a>
-                <a href="#combining-selectors-and-combinators" class="nav-link">Combining selectors and combinators</a>
-                <a href="#wrapping-up" class="nav-link">Wrapping up</a>
+                <a href="#introduction" class="nav-link">Introduction</a>
+                <a href="#object-basics" class="nav-link">Object basics</a>
+                <a href="#dot-notation" class="nav-link">Dot notation</a>
+                <a href="#bracket-notation" class="nav-link">Bracket notation</a>
+                <a href="#setting-object-members" class="nav-link">Setting object members</a>
+                <a href="#what-is-this" class="nav-link">What is "this"?</a>
+                <a href="#you've-been-using-objects-all-along" class="nav-link">You've been using objects all along</a>
+                <a href="#test-your-skills" class="nav-link">Test your skills!</a>
+                <a href="#summary" class="nav-link">Summary</a>
             </nav>
         </div>
     </div>
@@ -34,39 +34,39 @@
     <div id="main-div">
         <main id="main-doc">
             <section class="main-section">
-                <header id="starting-with-some-html">Starting with some HTML</header>
-                <p>Temp Content 1</p>
+                <header id="introduction">Introduction</header>
+                <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="adding-css-to-our-document">Adding CSS to our document</header>
+                <header id="object-basics">Object basics</header>
+                <p>Our starting point is an HTML document. You can copy the code from below if you want to work on your own computer. Save the code below as index.html in a folder on your machine.</p>
+            </section>
+            <section class="main-section">
+                <header id="dot-notation">Dot notation</header>
                 <p>Temp Content 22</p>
             </section>
             <section class="main-section">
-                <header id="styling-html-elements">Styling HTML elements</header>
+                <header id="bracket-notation">Bracket notation</header>
                 <p>Temp Content 333</p>
             </section>
             <section class="main-section">
-                <header id="changing-the-default-behavior-of-elements">Changing the default behavior of elements</header>
+                <header id="setting-object-members">Setting object members</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="adding-a-class">Adding a class</header>
+                <header id="what-is-this">What is "this"?</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="styling-thing-based-on-their-location-in-a-document">Styling thing based on their location in a document</header>
+                <header id="you've-been-using-objects-all-along">You've been using objects all along</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="styling-thing-based-on-state">Styling thing based on state</header>
+                <header id="test-your-skills">Test your skills!</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="combining-selectors-and-combinators">Combining selectors and combinators</header>
-                <p>Temp Content 4444</p>
-            </section>
-            <section class="main-section">
-                <header id="wrapping-up">Wrapping up</header>
+                <header id="summary">Summary</header>
                 <p>Temp Content 4444</p>
             </section>
         </main>
