--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
         <main id="main-doc">
             <section class="main-section">
                 <header id="introduction">Introduction</header>
-                <p>Temp Content 4444</p>
+                <p>In this article, we'll look at fundamental JavaScript object syntax, and revisit some JavaScript features that we've already seen earlier in the course, reiterating the fact that many of the features you've already dealt with are objects.</p>
             </section>
             <section class="main-section">
                 <header id="object-basics">Object basics</header>
-                <p>Our starting point is an HTML document. You can copy the code from below if you want to work on your own computer. Save the code below as index.html in a folder on your machine.</p>
+                <p>An object is a collection of related data and/or functionality (which usually consists of several variables and functions — which are called properties and methods when they are inside objects.) Let's work through an example to understand what they look like.</p>
+                <p>To begin with, make a local copy of our <a href="https://github.com/mdn/learning-area/blob/master/javascript/oojs/introduction/oojs.html">oojs.html</a> file. This contains very little — a element for us to write our source code into. We'll use this as a basis for exploring basic object syntax. While working with this example you should have your developer tools JavaScript console open and ready to type in some commands.</p>
+                <p>As with many things in JavaScript, creating an object often begins with defining and initializing a variable. Try entering the following line below the JavaScript code that's already in your file, then saving and refreshing:</p>
+                <code>const person = {};</code>
             </section>
             <section class="main-section">
                 <header id="dot-notation">Dot notation</header>
