Changed Topic, updated content

--- a/index.html
+++ b/index.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>JavaScript Object Basics</title>
+    <title>JS Documentation</title>
 </head>
 <body>
     <!-- Header/Nav Div -->
     <div id="header-nav">
         <!-- Header -->
         <div id="div-header">
-            <header id="main-header">JavaScript Object Basics</header>
+            <header id="main-header">JS Documentation</header>
         </div>
 
         <!-- Navigation -->
         <div id="nav-div">
             <nav id="navbar">
                 <a href="#introduction" class="nav-link">Introduction</a>
-                <a href="#object-basics" class="nav-link">Object basics</a>
-                <a href="#dot-notation" class="nav-link">Dot notation</a>
-                <a href="#bracket-notation" class="nav-link">Bracket notation</a>
-                <a href="#setting-object-members" class="nav-link">Setting object members</a>
-                <a href="#what-is-this" class="nav-link">What is "this"?</a>
-                <a href="#you've-been-using-objects-all-along" class="nav-link">You've been using objects all along</a>
-                <a href="#test-your-skills" class="nav-link">Test your skills!</a>
-                <a href="#summary" class="nav-link">Summary</a>
+                <a href="#what-you-should-already-know" class="nav-link">What you should already know</a>
+                <a href="#javascript-and-java" class="nav-link">JavaScript and Java</a>
+                <a href="#hello-world" class="nav-link">Hello World</a>
+                <a href="#variables" class="nav-link">Variables</a>
+                <a href="#declaring-variables" class="nav-link">Declaring variables</a>
+                <a href="#variable-scope" class="nav-link">Variable scope</a>
+                <a href="#global-variables" class="nav-link">Global variables</a>
+                <a href="#constants" class="nav-link">Constants</a>
+                <a href="#data-types" class="nav-link">Data types</a>
+                <a href="#if-else-statement" class="nav-link">if...else statement</a>
+                <a href="#while-statement" class="nav-link">while statement</a>
+                <a href="#function-declarations" class="nav-link">Function declarations</a>
+                <a href="#reference" class="nav-link">Reference</a>
             </nav>
         </div>
     </div>
@@ -35,42 +40,56 @@
         <main id="main-doc">
             <section class="main-section">
                 <header id="introduction">Introduction</header>
-                <p>In this article, we'll look at fundamental JavaScript object syntax, and revisit some JavaScript features that we've already seen earlier in the course, reiterating the fact that many of the features you've already dealt with are objects.</p>
             </section>
             <section class="main-section">
-                <header id="object-basics">Object basics</header>
-                <p>An object is a collection of related data and/or functionality (which usually consists of several variables and functions — which are called properties and methods when they are inside objects.) Let's work through an example to understand what they look like.</p>
-                <p>To begin with, make a local copy of our <a href="https://github.com/mdn/learning-area/blob/master/javascript/oojs/introduction/oojs.html">oojs.html</a> file. This contains very little — a element for us to write our source code into. We'll use this as a basis for exploring basic object syntax. While working with this example you should have your developer tools JavaScript console open and ready to type in some commands.</p>
-                <p>As with many things in JavaScript, creating an object often begins with defining and initializing a variable. Try entering the following line below the JavaScript code that's already in your file, then saving and refreshing:</p>
-                <p>Now open your browser's <a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools#The_JavaScript_console">JavaScript console</a>, enter person into it, and press <span id="enterBtn">Enter</span>/<span id="returnBtn">Return</span>. You should get a result similar to one of the below lines:</p>
-                <p>Congratulations, you've just created your first object. Job done! But this is an empty object, so we can't really do much with it. Let's update the JavaScript object in our file to look like this:</p>
+                <header id="what-you-should-already-know">What you should already know</header>
             </section>
             <section class="main-section">
-                <header id="dot-notation">Dot notation</header>
+                <header id="javascript-and-java">JavaScript and Java</header>
                 <p>Temp Content 22</p>
             </section>
             <section class="main-section">
-                <header id="bracket-notation">Bracket notation</header>
+                <header id="hello-world">Hello World</header>
                 <p>Temp Content 333</p>
             </section>
             <section class="main-section">
-                <header id="setting-object-members">Setting object members</header>
+                <header id="variables">Variables</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="what-is-this">What is "this"?</header>
+                <header id="declaring-variables">Declaring variables</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="you've-been-using-objects-all-along">You've been using objects all along</header>
+                <header id="variable-scope">Variable scope</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="test-your-skills">Test your skills!</header>
+                <header id="global-variables">Global variables</header>
                 <p>Temp Content 4444</p>
             </section>
             <section class="main-section">
-                <header id="summary">Summary</header>
+                <header id="constants">Constants</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="data-types">Data types</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="if-else-statement">if...else statement</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="while-statement">while statement</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="function-declarations">Function declarations</header>
+                <p>Temp Content 4444</p>
+            </section>
+            <section class="main-section">
+                <header id="reference">Reference</header>
                 <p>Temp Content 4444</p>
             </section>
         </main>
