--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <title>JS Documentation</title>
 </head>
 <body>
@@ -193,11 +195,6 @@
                 </ul>
             </section>
         </main>
-    </div>
-
-    <!-- Footer -->
-    <div id="footer-div">
-
     </div>
 </body>
 </html>
